--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1042,7 +1042,7 @@ body {
 .about--banner h2 {
     margin-top: 10px;
     font-size: 44px;
-}
+}cta
 .about--banner h2::before {
     top: 28px;
     left: 168px;
